--- a/templates/index.html
+++ b/templates/index.html
@@ -4,25 +4,25 @@
     <head>
         <meta charset="utf-8">
         <title>The Wall</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <h1>The Wall!</h1>
   
   <h2>Log In</h2>
   <form action='/login' method='POST'>
-    <label for="user_name">User Name:<input type="text" name="user_name" id="user_name"></label>
+    <label for="Email">Email:<input type="text" name="Email" id="Email"></label>
     <br>
-    <label for="Password">Password:<input type="text" name="password" id="password"></label>
-    <br>
+    
     <button type="submit" value="Submit">Submit</button>
   </form>
 <br>
   <form action='/register' method='POST'>
-    <label for="user_name">User Name:<input type="text" name="user_name" id="user_name"></label>
+    <label for="Email">Email:<input type="text" name="Email" id="Email"></label>
     <br>
-    <label for="Password">Password:<input type="text" name="password" id="password"></label>
+    <label for="First Name">First Name:<input type="text" name="First Name" id="First Name"></label>
     <br>
-    <label for="Password">Confirm Password:<input type="text" name="password_confirm" id="password_confirm"></label>
+    <label for="Last Name">Last Name:<input type="text" name="Last Name" id="Last Name"></label>
     <br>
     <button type="submit" value="Register">Register</button>
   </form>
