--- a/templates/index.html
+++ b/templates/index.html
@@ -11,20 +11,20 @@
   
   <h2>Log In</h2>
   <form action='/login' method='POST'>
-    <label for="Email">Email:<input type="text" name="Email" id="Email"></label>
+    <label for="email">Email:<input type="text" name="email" id="email"></label>
     <br>
     
-    <button type="submit" value="Submit">Submit</button>
+    <button type="submit" value="submit">Submit</button>
   </form>
 <br>
   <form action='/register' method='POST'>
-    <label for="Email">Email:<input type="text" name="Email" id="Email"></label>
+    <label for="email">Email:<input type="text" name="email" id="email"></label>
     <br>
-    <label for="First Name">First Name:<input type="text" name="First Name" id="First Name"></label>
+    <label for="first_name">First Name:<input type="text" name="first_name" id="first_name"></label>
     <br>
-    <label for="Last Name">Last Name:<input type="text" name="Last Name" id="Last Name"></label>
+    <label for="last_name">Last Name:<input type="text" name="last_name" id="last_name"></label>
     <br>
-    <button type="submit" value="Register">Register</button>
+    <button type="submit" value="register">Register</button>
   </form>
 </body>
 </html>
